--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -7,6 +7,11 @@ jobs:
     strategy:
       matrix:
         pkg: [app, core, editor, i18n]
+        include:
+          - pkg: app
+            ext: .tsx
+          - pkg: app
+            ext: .ts
     steps:
       - name: Show output per pkg
         run: echo "yarn ${{matrix.pkg}}"
